<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ACTIVITY.Login">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/undraw_secure_login_pdn4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login Now"
            android:textColor="#040E6A"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/please_login_to_continue_using_the_app"
            android:textColor="#2F3784"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/logInEtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:hint="@string/email" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/loginEtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:paddingBottom="10dp" />
        </androidx.cardview.widget.CardView>




    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_design"
        android:text="Login"
        android:textColor="@color/colorEditTextBgColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_goneMarginTop="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/finalwave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_asking_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/myfont"
        android:paddingBottom="10dp"
        android:text="@string/don_t_have_an_account_signup"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
