<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ACTIVITY.Login">





    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/undraw_with_love_re_1q3m"
android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="180dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/myfont"
            android:text="SignUp Now"
            android:textColor="#040E6A"
            android:textSize="30dp"
            android:textStyle="bold" />





        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:elevation="20dp"
            android:padding="10dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:hint="@string/email" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:hint="@string/password" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:elevation="8dp"
            android:padding="10dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:hint="Confirm Password" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBarr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:layout_marginBottom="95dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_design"
        android:text="Sign Up"
        android:textColor="@color/colorEditTextBgColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/finalwave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_asking_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="@string/already_have_an_account_login"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>
